# internal/dto/dto.go
@@ -20,3 +20,7 @@ type GetJwtInput struct {
 	Email    string `json:"email"`
 	Password string `json:"password"`
 }
+
+type GetJwtOutput struct {
+	AccessToken string `json:"access_token"`
+}
